--- a/src/main/resources/templates/layaut/layaut.html
+++ b/src/main/resources/templates/layaut/layaut.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html xmlns:th="http://www.thymeleaf.org">
+<html xmlns:th="http://www.thymeleaf.org" xmlns:sec="http://www.thymeleaf.org/extras/spring-security">
 
 <head th:fagment="head">
     <meta charset='utf-8'>
@@ -26,6 +26,21 @@
                             <a class="nav-link active" aria-current="page" th:href="@{/listar}">Cliente</a>
                         </li>
                     </ul>
+                    <ul class="navbar-nav">
+                        <li sec:authorize="!isAuthenticated"><a class="btn btn-outline-primary" th:href="@{/login}">Sign
+                                In</a></li>
+                        <div class="dropdown" sec:authorize="isAuthenticated">
+                            <a class="btn btn-outline-primary dropdown-toggle" href="#" role="button"
+                                id="dropdownMenuLink" data-bs-toggle="dropdown" aria-expanded="false">
+                                <span sec:authentication="name"></span>
+                            </a>
+                            <div class="dropdown-menu" aria-labelledby="dropdownMenuLink">
+                                <form id="logoutForm" th:action="@{/logout}" method="post">
+                                    <button onclick="document.getElementById('logoutForm').submit();">Logout</button>
+                                </form>
+                            </div>
+                        </div>
+                    </ul>
                 </div>
             </div>
         </nav>
@@ -38,11 +53,25 @@
 
     </div>
     <footer th:fagment="footer" class="container">
-        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
-            integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
-            crossorigin="anonymous"></script>
-
+        <hr />
+        <div class="row">
+            <div class="col col-lg-1">
+                <img class="img-fluid img-responsive" th:src="@{/images/springbootlogo.png}" alt="Spting Logo">
+            </div>
+            <div class="col">
+                <p sec:authorize="isAuthenticated()">
+                    Usuario logeado: <span sec:authentication="name"></span>
+                </p>
+                <p>
+                    Este es un proyecto desarrollado en Visual Studio Code + Pring Plugins
+                    por Julio Veron @dannyverm.</br>&copy; Company 2021, Inc. Todos los
+                    derechos reservados. Términos de uso y privacidad.</br>
+                </p>
+            </div>
+        </div>
+        
         <script th:src="@{/js/jquery-3.6.0.min.js}"></script>
+        <script th:src="@{/js/popper.min.js}"></script>
         <script th:src="@{/js/jquery-ui.min.js}"></script>
     </footer>
 </body>
