--- a/src/main/resources/templates/ver.html
+++ b/src/main/resources/templates/ver.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html xmlns:th="http://www.thymeleaf.org">
+<html xmlns:th="http://www.thymeleaf.org" xmlns:sec="http://www.thymeleaf.org/extras/spring-security">
 
 <head th:replace="layaut/layaut :: head">
 </head>
@@ -11,7 +11,7 @@
       <div class="card-header" th:text="${titulo}"></div>
       <div class="card-body">
         <h4 class="card-title">
-          <a class="btn btn-primary btn-xs" th:href="@{'/factura/form/'+${cliente.id}}">Crear Factura</a>
+          <a class="btn btn-primary btn-xs" sec:authorize="hasRole('ROLE_ADMIN')" th:href="@{'/factura/form/'+${cliente.id}}">Crear Factura</a>
         </h4>
         <div class="row">
           <div class="col col-sm-2">
@@ -33,8 +33,8 @@
                   <th>Descripcion</th>
                   <th>Fecha</th>
                   <th>Total</th>
-                  <th>Ver</th>
-                  <th>Eliminar</th>
+                  <th sec:authorize="hasRole('ROLE_ADMIN')">Ver</th>
+                  <th sec:athorize="hasRole('ROLE_ADMIN')">Eliminar</th>
                 </tr>
               </thead>
               <tbody>
@@ -43,8 +43,8 @@
                   <td th:text="${factura.descripcion}"></td>
                   <td th:text="${factura.createAt}"></td>
                   <td th:text="${factura.total}"></td>
-                  <td><a class="btn btn-primary btn-xs" th:href="@{'/factura/ver/'+${factura.id}}">Detalle</a></td>
-                  <td><a class="btn btn-danger btn-xs" th:href="@{'/factura/eliminar/'+${factura.id}}" onclick="return confirm('Está seguro que desea eliminar la factura?')">Eliminar</a></td>
+                  <td><a sec:authorize="hasRole('ROLE_ADMIN')" class="btn btn-primary btn-xs" th:href="@{'/factura/ver/'+${factura.id}}">Detalle</a></td>
+                  <td><a sec:authorize="hasRole('ROLE_ADMIN')" class="btn btn-danger btn-xs" th:href="@{'/factura/eliminar/'+${factura.id}}" onclick="return confirm('Está seguro que desea eliminar la factura?')">Eliminar</a></td>
                 </tr>
               </tbody>
 
